updated the requirements.txt

--- a/Rag-Application/requirements.txt
+++ b/Rag-Application/requirements.txt
@@ -1,12 +1,9 @@
+streamlit
 langchain
-langchain_community
-langchain_text_splitters
-dotenv
-langchain_openai
-langchain_chroma
-langchain_core
-faiss_cpu
+langchain-community
+langchain-openai
+langchain-core
+faiss-cpu
 python-dotenv
 pypdf
-streamlit
-langchain.chains
+chromadb
