--- a/Rag-Application/requirements.txt
+++ b/Rag-Application/requirements.txt
@@ -1,9 +1,10 @@
-streamlit
-langchain
-langchain-community
-langchain-openai
-langchain-core
-faiss-cpu
-python-dotenv
-pypdf
-chromadb
+streamlit==1.35.0
+langchain==0.2.5
+langchain-community==0.2.5
+langchain-openai==0.1.8
+langchain-core==0.2.9
+langchain-text-splitters==0.2.1
+faiss-cpu==1.8.0
+python-dotenv==1.0.1
+pypdf==4.2.0
+chromadb==0.5.0
