updated the rag

--- a/Rag-Application/Jenkinsfile
+++ b/Rag-Application/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline{
         stage('Docker build and Tag'){
             steps{
                 sh '''
+                    cd Rag-Application/
                     printenv
                     docker build -t ${IMAGE_NAME} .
                 '''
