updated the path

--- a/Rag-Application/Jenkinsfile
+++ b/Rag-Application/Jenkinsfile
@@ -16,9 +16,9 @@ pipeline{
         stage('Docker build and Tag'){
             steps{
                 sh '''
-                    cd Rag-Application/
+                    // cd Rag-Application/
                     printenv
-                    docker build -t ${IMAGE_NAME} .
+                    docker build -t ${IMAGE_NAME} -f Rag-Application/ .
                 '''
             }
         }
