--- a/Rag-Application/Jenkinsfile
+++ b/Rag-Application/Jenkinsfile
@@ -1,136 +1,169 @@
-pipeline {
+pipeline{
     agent any
 
-    environment {
+    environment{
         AWS_REGION = "us-west-2"
-        CLUSTER_NAME = "microdegree-cluster"
-        NAMESPACE = "microdegree"
-        DEPLOYMENT_NAME = "md-genai"
-        SERVICE_NAME = "md-genai-service"
         IMAGE_NAME = "manojkrishnappa/md-genai:${GIT_COMMIT}"
     }
 
-    stages {
-        stage('Git Checkout') {
-            steps {
-                git branch: 'main', url: 'https://github.com/ManojKRISHNAPPA/Generative-AI-Project.git'
+    stages{
+        stage('git checkout'){
+            steps{
+                git branch: 'main', url: 'https://github.com/ManojKRISHNAPPA/ProjectGenAI-WITHCICD.git'
             }
         }
 
-        stage('Build & Tag Docker Image') {
-            steps {
-                script {
-                sh 'pwd;cd Rag-Application/ ; printenv'
-                sh 'docker build -t ${IMAGE_NAME}  .'
-                // sh '''
-
-                //     cd ProjectGenAI-WITHCICD/Rag-Application
-                //     pwd
-                //     printenv
-                //     docker build -t ${IMAGE_NAME}  .
-                // '''
-                 }
+        stage('Docker build and Tag'){
+            steps{
+                sh '''
+                    cd Rag-Application/
+                    pwd
+                    printenv
+                    docker build -t ${IMAGE_NAME}  .
+                '''
             }
         }
-
-        stage('Docker Image Scan') {
-            steps {
-                script {
-                    sh 'trivy image --format table -o trivy-image-report.html manojkrishnappa/md-genai:${GIT_COMMIT}'
-                }
-            }
-        }
-
-        stage('Login to Docker Hub') {
-            steps {
-                withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
-                    sh "echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin"
-                }
-            }
-        }
-
-        stage('Push Docker Image') {
-            steps {
-                sh 'docker push ${IMAGE_NAME}'
-            }
-        }
-
-        stage('Update EKS Config') {
-            steps {
-                sh "aws eks update-kubeconfig --region ${AWS_REGION} --name ${CLUSTER_NAME}"
-            }
-        }
-
-        stage('Deploy to EKS') {
-            steps {
-                withKubeConfig(
-                    caCertificate: '',
-                    clusterName: 'microdegree-cluster',
-                    contextName: '',
-                    credentialsId: 'kube',
-                    namespace: "${NAMESPACE}",
-                    restrictKubeConfigAccess: false,
-                    serverUrl: 'https://74209E26C70B348EC102C0F4F7C90F08.sk1.us-west-2.eks.amazonaws.com'
-                ) {
-                    sh 'cd Rag-Application/;pwd'
-                    sh "sed -i 's|replace|${IMAGE_NAME}|g' deployment.yaml"
-                    sh "kubectl apply -f deployment.yaml -n ${NAMESPACE}"
-                    sh "kubectl rollout status deployment/${DEPLOYMENT_NAME} -n ${NAMESPACE}"
-                }
-            }
-        }
-
-        stage('Verify Deployment') {
-            steps {
-                withKubeConfig(
-                    caCertificate: '',
-                    clusterName: 'microdegree-cluster',
-                    contextName: '',
-                    credentialsId: 'kube',
-                    namespace: "${NAMESPACE}",
-                    restrictKubeConfigAccess: false,
-                    serverUrl: 'https://74209E26C70B348EC102C0F4F7C90F08.sk1.us-west-2.eks.amazonaws.com'
-                ) {
-                    sh "kubectl get deployment -n ${NAMESPACE}"
-                    sh "kubectl get pods -n ${NAMESPACE}"
-                    sh "kubectl get svc -n ${NAMESPACE}"
-                }
-            }
-        }
-    }
-
-    post {
-        always {
-            script {
-                def jobName = env.JOB_NAME
-                def buildNumber = env.BUILD_NUMBER
-                def pipelineStatus = currentBuild.result ?: 'SUCCESS'
-                def bannerColor = pipelineStatus.toUpperCase() == 'SUCCESS' ? 'green' : 'red'
-
-                def body = """
-                    <html>
-                    <body>
-                    <div style="border: 4px solid ${bannerColor}; padding: 10px;">
-                        <h2>${jobName} - Build ${buildNumber}</h2>
-                        <div style="background-color: ${bannerColor}; padding: 10px;">
-                            <h3 style="color: white;">Pipeline Status: ${pipelineStatus.toUpperCase()}</h3>
-                        </div>
-                        <p>Check the <a href="${BUILD_URL}">console output</a>.</p>
-                    </div>
-                    </body>
-                    </html>
-                """
-
-                emailext (
-                    subject: "${jobName} - Build ${buildNumber} - ${pipelineStatus.toUpperCase()}",
-                    body: body,
-                    to: 'manojdevopstest@gmail.com',
-                    from: 'manojdevopstest@gmail.com',
-                    replyTo: 'manojdevopstest@gmail.com',
-                    mimeType: 'text/html',
-                    attachmentsPattern: 'trivy-image-report.html'
-                )
-            }
-        }
+       
     }
 }
+
+
+
+
+
+// pipeline {
+//     agent any
+
+//     environment {
+//         AWS_REGION = "us-west-2"
+//         CLUSTER_NAME = "microdegree-cluster"
+//         NAMESPACE = "microdegree"
+//         DEPLOYMENT_NAME = "md-genai"
+//         SERVICE_NAME = "md-genai-service"
+//         IMAGE_NAME = "manojkrishnappa/md-genai:${GIT_COMMIT}"
+//     }
+
+//     stages {
+//         stage('Git Checkout') {
+//             steps {
+//                 git branch: 'main', url: 'https://github.com/ManojKRISHNAPPA/Generative-AI-Project.git'
+//             }
+//         }
+
+//         stage('Build & Tag Docker Image') {
+//             steps {
+//                 script {
+//                 sh 'pwd;cd Rag-Application/ ; printenv'
+//                 sh 'docker build -t ${IMAGE_NAME}  .'
+//                 // sh '''
+
+//                 //     cd ProjectGenAI-WITHCICD/Rag-Application
+//                 //     pwd
+//                 //     printenv
+//                 //     docker build -t ${IMAGE_NAME}  .
+//                 // '''
+//                  }
+//             }
+//         }
+
+//         stage('Docker Image Scan') {
+//             steps {
+//                 script {
+//                     sh 'trivy image --format table -o trivy-image-report.html manojkrishnappa/md-genai:${GIT_COMMIT}'
+//                 }
+//             }
+//         }
+
+//         stage('Login to Docker Hub') {
+//             steps {
+//                 withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+//                     sh "echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin"
+//                 }
+//             }
+//         }
+
+//         stage('Push Docker Image') {
+//             steps {
+//                 sh 'docker push ${IMAGE_NAME}'
+//             }
+//         }
+
+//         stage('Update EKS Config') {
+//             steps {
+//                 sh "aws eks update-kubeconfig --region ${AWS_REGION} --name ${CLUSTER_NAME}"
+//             }
+//         }
+
+//         stage('Deploy to EKS') {
+//             steps {
+//                 withKubeConfig(
+//                     caCertificate: '',
+//                     clusterName: 'microdegree-cluster',
+//                     contextName: '',
+//                     credentialsId: 'kube',
+//                     namespace: "${NAMESPACE}",
+//                     restrictKubeConfigAccess: false,
+//                     serverUrl: 'https://74209E26C70B348EC102C0F4F7C90F08.sk1.us-west-2.eks.amazonaws.com'
+//                 ) {
+//                     sh 'cd Rag-Application/;pwd'
+//                     sh "sed -i 's|replace|${IMAGE_NAME}|g' deployment.yaml"
+//                     sh "kubectl apply -f deployment.yaml -n ${NAMESPACE}"
+//                     sh "kubectl rollout status deployment/${DEPLOYMENT_NAME} -n ${NAMESPACE}"
+//                 }
+//             }
+//         }
+
+//         stage('Verify Deployment') {
+//             steps {
+//                 withKubeConfig(
+//                     caCertificate: '',
+//                     clusterName: 'microdegree-cluster',
+//                     contextName: '',
+//                     credentialsId: 'kube',
+//                     namespace: "${NAMESPACE}",
+//                     restrictKubeConfigAccess: false,
+//                     serverUrl: 'https://74209E26C70B348EC102C0F4F7C90F08.sk1.us-west-2.eks.amazonaws.com'
+//                 ) {
+//                     sh "kubectl get deployment -n ${NAMESPACE}"
+//                     sh "kubectl get pods -n ${NAMESPACE}"
+//                     sh "kubectl get svc -n ${NAMESPACE}"
+//                 }
+//             }
+//         }
+//     }
+
+//     post {
+//         always {
+//             script {
+//                 def jobName = env.JOB_NAME
+//                 def buildNumber = env.BUILD_NUMBER
+//                 def pipelineStatus = currentBuild.result ?: 'SUCCESS'
+//                 def bannerColor = pipelineStatus.toUpperCase() == 'SUCCESS' ? 'green' : 'red'
+
+//                 def body = """
+//                     <html>
+//                     <body>
+//                     <div style="border: 4px solid ${bannerColor}; padding: 10px;">
+//                         <h2>${jobName} - Build ${buildNumber}</h2>
+//                         <div style="background-color: ${bannerColor}; padding: 10px;">
+//                             <h3 style="color: white;">Pipeline Status: ${pipelineStatus.toUpperCase()}</h3>
+//                         </div>
+//                         <p>Check the <a href="${BUILD_URL}">console output</a>.</p>
+//                     </div>
+//                     </body>
+//                     </html>
+//                 """
+
+//                 emailext (
+//                     subject: "${jobName} - Build ${buildNumber} - ${pipelineStatus.toUpperCase()}",
+//                     body: body,
+//                     to: 'manojdevopstest@gmail.com',
+//                     from: 'manojdevopstest@gmail.com',
+//                     replyTo: 'manojdevopstest@gmail.com',
+//                     mimeType: 'text/html',
+//                     attachmentsPattern: 'trivy-image-report.html'
+//                 )
+//             }
+//         }
+//     }
+// }
