--- a/Rag-Application/Jenkinsfile
+++ b/Rag-Application/Jenkinsfile
@@ -1,7 +1,7 @@
-pipeline{
+pipeline {
     agent any
 
-    environment{
+    environment {
         AWS_REGION = "us-west-2"
         IMAGE_NAME = "manojkrishnappa/md-genai:${GIT_COMMIT}"
         CLUSTER_NAME = "microdegree-cluster"
@@ -10,30 +10,34 @@ pipeline{
         SERVICE_NAME = "md-genai-service"
     }
 
-    stages{
-        stage('git checkout'){
-            steps{
+    stages {
+        stage('git checkout') {
+            steps {
                 git branch: 'main', url: 'https://github.com/ManojKRISHNAPPA/ProjectGenAI-WITHCICD.git'
             }
         }
 
-        stage('Docker build and Tag'){
-            steps{
-                sh '''
-                    cd Rag-Application/
-                    pwd
-                    printenv
-                    docker build -t ${IMAGE_NAME}  .
-                '''
+        stage('Docker build and Tag') {
+            steps {
+                dir('Rag-Application') {
+                    sh '''
+                        pwd
+                        printenv
+                        docker build -t ${IMAGE_NAME} .
+                    '''
+                }
             }
         }
+
         stage('Docker Image Scan') {
             steps {
                 script {
                     sh 'trivy image --format table -o trivy-image-report.html ${IMAGE_NAME}'
+                    archiveArtifacts artifacts: 'trivy-image-report.html', fingerprint: true
                 }
             }
         }
+
         stage('Login to Docker Hub') {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
@@ -58,17 +62,18 @@ pipeline{
             steps {
                 withKubeConfig(
                     caCertificate: '',
-                    clusterName: 'microdegree-cluster',
+                    clusterName: "${CLUSTER_NAME}",
                     contextName: '',
                     credentialsId: 'kube',
                     namespace: "${NAMESPACE}",
                     restrictKubeConfigAccess: false,
                     serverUrl: 'https://74209E26C70B348EC102C0F4F7C90F08.sk1.us-west-2.eks.amazonaws.com'
                 ) {
-                    sh 'cd Rag-Application/;pwd'
-                    sh "sed -i 's|replace|${IMAGE_NAME}|g' deployment.yaml"
-                    sh "kubectl apply -f deployment.yaml -n ${NAMESPACE}"
-                    sh "kubectl rollout status deployment/${DEPLOYMENT_NAME} -n ${NAMESPACE}"
+                    dir('Rag-Application') {
+                        sh "sed -i 's|replace|${IMAGE_NAME}|g' deployment.yaml"
+                        sh "kubectl apply -f deployment.yaml -n ${NAMESPACE}"
+                        sh "kubectl rollout status deployment/${DEPLOYMENT_NAME} -n ${NAMESPACE}"
+                    }
                 }
             }
         }
@@ -77,7 +82,7 @@ pipeline{
             steps {
                 withKubeConfig(
                     caCertificate: '',
-                    clusterName: 'microdegree-cluster',
+                    clusterName: "${CLUSTER_NAME}",
                     contextName: '',
                     credentialsId: 'kube',
                     namespace: "${NAMESPACE}",
@@ -90,10 +95,5 @@ pipeline{
                 }
             }
         }
-       
     }
 }
-
-
-
-
