--- a/Rag-Application/Jenkinsfile
+++ b/Rag-Application/Jenkinsfile
@@ -4,6 +4,9 @@ pipeline {
     environment{
         AWS_REGION = "us-west-2"
         IMAGE_NAME = "manojkrishnappa/md-genai:${GIT_COMMIT}"
+        NAMESPACE = "microdegree"
+        CLUSTER_NAME = "microdegree-cluster"
+        DEPLOYMENT_NAME = "md-genai"
     }
 
     stages{
@@ -20,6 +23,73 @@ pipeline {
                         printenv
                         docker build -t ${IMAGE_NAME} .    
                     '''
+                }
+            }
+        }
+
+        stage('Image-scan'){
+            steps{
+                script{
+                    sh 'trivy image --format table -o trivy-image-report.html ${IMAGE_NAME}'
+                    archiveArtifacts articats: 'trivy-image-report.html', fingerprint: true
+                }
+            }
+        }
+
+       stage('Login to Docker Hub') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'docker-hub-credentials', usernameVariable: 'DOCKER_USERNAME', passwordVariable: 'DOCKER_PASSWORD')]) {
+                    sh "echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin"
+                }
+            }
+        }
+
+        stage('Push Docker Image') {
+            steps {
+                sh 'docker push ${IMAGE_NAME}'
+            }
+        }
+
+        stage('Update EKS Config') {
+            steps {
+                sh "aws eks update-kubeconfig --region ${AWS_REGION} --name ${CLUSTER_NAME}"
+            }
+        }
+
+        stage('Deploy to EKS') {
+            steps {
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: "${CLUSTER_NAME}",
+                    contextName: '',
+                    credentialsId: 'kube',
+                    namespace: "${NAMESPACE}",
+                    restrictKubeConfigAccess: false,
+                    serverUrl: 'https://14DADBB466DAE0C6F579EA7BB38C18F1.gr7.us-west-2.eks.amazonaws.com'
+                ) {
+                    dir('Rag-Application') {
+                        sh "sed -i 's|replace|${IMAGE_NAME}|g' deployment.yaml"
+                        sh "kubectl apply -f deployment.yaml -n ${NAMESPACE}"
+                        sh "kubectl rollout status deployment/${DEPLOYMENT_NAME} -n ${NAMESPACE}"
+                    }
+                }
+            }
+        }
+
+        stage('Verify Deployment') {
+            steps {
+                withKubeConfig(
+                    caCertificate: '',
+                    clusterName: "${CLUSTER_NAME}",
+                    contextName: '',
+                    credentialsId: 'kube',
+                    namespace: "${NAMESPACE}",
+                    restrictKubeConfigAccess: false,
+                    serverUrl: 'https://14DADBB466DAE0C6F579EA7BB38C18F1.gr7.us-west-2.eks.amazonaws.com'
+                ) {
+                    sh "kubectl get deployment -n ${NAMESPACE}"
+                    sh "kubectl get pods -n ${NAMESPACE}"
+                    sh "kubectl get svc -n ${NAMESPACE}"
                 }
             }
         }
